--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ license = "MIT"
 python = "^3.8"
 "discord.py" = "^1.7.1"
 texttable = "^1.6.3"
+jsonpickle = "^2.0.0"
 
 [tool.poetry.dev-dependencies]
 
